Adjust renovate matching

--- a/renovate.json
+++ b/renovate.json
@@ -198,7 +198,7 @@
       "automergeType": "branch",
       "groupName": "renovate",
       "matchPackageNames": [
-        "/^renovatebot\\/renovate$"
+        "renovatebot/renovate"
       ],
       "schedule": [
         "after 4pm on friday"
