--- a/plays/kairos/get_kubeconfig.yml
+++ b/plays/kairos/get_kubeconfig.yml
@@ -18,6 +18,7 @@
       ansible.builtin.copy:
         content: "{{ remote_config['content'] | b64decode | replace('127.0.0.1', vip ) }}"
         dest: ~/.kube/config
+        mode: u=rwx
       delegate_to: localhost
       vars:
         vip: "{{ hostvars[inventory_hostname].k3s_controlplane_san | first }}"
