Setup minio in postgres-operator space for future backups

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -228,6 +228,7 @@ bind_zones:
           - lg-penpot
           - longhorn.hogs
           - manyfold.hogs
+          - minio-postgres.hogs
           - mqtt.hogs
           - nas.hogs
           - navidrome
