--- a/kustomization/overlays/prod/postgresql/kustomization.yml
+++ b/kustomization/overlays/prod/postgresql/kustomization.yml
@@ -3,7 +3,20 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 components:
+  - ../../../components/minio
   - ../../../components/postgresql-operator
 namespace: postgresql
+patches:
+  - path: patches/minio/set_root_credentials.yml
+    target:
+      kind: StatefulSet
+      name: minio-statefulset
+  - path: patches/minio/use_nfs_storage.yml
+    target:
+      kind: StatefulSet
+      name: minio-statefulset
 resources:
   - namespace.yml
+  - ingress.yml
+  - persistentvolume.yml
+  - persistentvolumeclaim.yml
