--- a/kustomization/overlays/prod/postgresql/kustomization.yml
+++ b/kustomization/overlays/prod/postgresql/kustomization.yml
@@ -15,6 +15,10 @@ patches:
     target:
       kind: StatefulSet
       name: minio-statefulset
+  - path: patches/postgres-operator/add_logical_backup.yml
+    target:
+      kind: OperatorConfiguration
+      name: postgresql-operator-default-configuration
 resources:
   - namespace.yml
   - ingress.yml
