Add logical backup for traefik postgres databases

--- a/kustomization/overlays/prod/traefik/postgresql.yml
+++ b/kustomization/overlays/prod/traefik/postgresql.yml
@@ -21,10 +21,7 @@ spec:
         - vector
       volumeSource:
         emptyDir: {}
-  teamId: authelia
-  volume:
-    size: 10Gi
-    storageClass: longhorn-encrypted-replicated-database
+  enableLogicalBackup: true
   numberOfInstances: 2
   podPriorityClassName: critical-application-infra
   postgresql:
@@ -45,3 +42,7 @@ spec:
         runAsNonRoot: false
         seccompProfile:
           type: RuntimeDefault
+  teamId: authelia
+  volume:
+    size: 10Gi
+    storageClass: longhorn-encrypted-replicated-database
