Add logical backup to homeassistant namespace

--- a/kustomization/overlays/prod/homeassistant/postgresql.yml
+++ b/kustomization/overlays/prod/homeassistant/postgresql.yml
@@ -21,10 +21,7 @@ spec:
         - vector
       volumeSource:
         emptyDir: {}
-  teamId: homeassistant
-  volume:
-    size: 50Gi
-    storageClass: longhorn-encrypted-replicated-database
+  enableLogicalBackup: true
   numberOfInstances: 3
   podPriorityClassName: critical-application-infra
   postgresql:
@@ -43,3 +40,7 @@ spec:
         runAsNonRoot: false
         seccompProfile:
           type: RuntimeDefault
+  teamId: homeassistant
+  volume:
+    size: 50Gi
+    storageClass: longhorn-encrypted-replicated-database
