Migrate ingress from ara component to overlay

--- a/kustomization/overlays/prod/ara/ingress.yml
+++ b/kustomization/overlays/prod/ara/ingress.yml
@@ -3,11 +3,13 @@ kind: Ingress
 metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
     traefik.ingress.kubernetes.io/router.tls: "true"
   name: ara-ingress
 spec:
   rules:
-    - http:
+    - host: ara.hogs.tswn.us
+      http:
         paths:
           - backend:
               service:
