--- a/kustomization/overlays/prod/ara/kustomization.yml
+++ b/kustomization/overlays/prod/ara/kustomization.yml
@@ -14,13 +14,6 @@ patches:
     target:
       kind: CronJob
       name: prune-old-logs
-  - path: patches/change_ingress_host.yml
-    target:
-      kind: Ingress
-      name: ara-ingress
-  - path: patches/set_ingress_middleware.yml
-    target:
-      kind: Ingress
-      name: ara-ingress
 resources:
   - namespace.yml
+  - ingress.yml
