--- a/kustomization/overlays/prod/argo-cd/ingress.yml
+++ b/kustomization/overlays/prod/argo-cd/ingress.yml
@@ -4,11 +4,13 @@ kind: Ingress
 metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
     traefik.ingress.kubernetes.io/router.tls: "true"
   name: argo-cd-ingress
 spec:
   rules:
-    - http:
+    - host: argo-cd.hogs.tswn.us
+      http:
         paths:
           - backend:
               service:
