--- a/kustomization/overlays/prod/argo-cd/kustomization.yml
+++ b/kustomization/overlays/prod/argo-cd/kustomization.yml
@@ -13,14 +13,6 @@ images:
   - name: timberio/vector
     newTag: 0.44.0-distroless-libc@sha256:ae164a9812e1e3d012bf5cb80c84116eb292ba78824ae568b7828f89dd90dc7f
 namespace: argocd
-patches:
-  - path: patches/change_ingress_host.yml
-    target:
-      kind: Ingress
-      name: argo-cd-ingress
-  - path: patches/set_ingress_middleware.yml
-    target:
-      kind: Ingress
-      name: argo-cd-ingress
 resources:
   - namespace.yml
+  - ingress.yml
