--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -9,12 +9,25 @@ configMapGenerator:
   - name: authelia-configmap
     files:
       - configmap/authelia-config.yml
+  - name: crowdsec-configmap
+    files:
+      - configmap/crowdsec/config.yaml.local
+  - name: crowdsec-acquisitions-configmap
+    files:
+      - configmap/crowdsec/acquis.d/traefik.yaml
+  - name: crowdsec-scripts-configmap
+    files:
+      - configmap/crowdsec/scripts/entrypoint.sh
   - name: postgresql-vector-metrics-sidecar-config
     files:
       - configmap/postgresql/vector.yaml
     options:
       disableNameSuffixHash: true
 images:
+  - name: ghcr.io/crowdsecurity/crowdsec
+    newTag: v1.6.4@sha256:091229068a9dab7f8c1ae41086669620da2980c6ccc26f9e358a75aaa7cb4a27 
+  - name: postgres
+    newTag: 16@sha256:c965017e1d29eb03e18a11abc25f5e3cd78cb5ac799d495922264b8489d5a3a1
   - name: quay.io/opstree/redis-sentinel
     newTag: v7.2.6@sha256:209dfd954d34f67ba104b88c90dec4f798bb8f05b78936e12f2f75428688cec8
   - name: quay.io/opstree/redis
@@ -49,6 +62,10 @@ patches:
     target:
       kind: Deployment
       name: authelia-deployment
+  - path: patches/crowdsec/add_container.yml
+    target:
+      kind: Deployment
+      name: traefik-deployment
   - path: patches/traefik/allow_external_name_services.yml
     target:
       kind: Deployment
@@ -73,6 +90,7 @@ patches:
 resources:
   - namespace.yml
   - ingress.yml
-  - postgresql.yml
+  - postgresql/authelia.yml
+  - postgresql/crowdsec.yml
   - redisreplication.yml
   - redissentinel.yml
