move certificate from component to overlay

--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -92,6 +92,7 @@ patches:
       name: traefik-ingress-controller
 resources:
   - namespace.yml
+  - certificate.yml
   - ingress.yml
   - postgresql/authelia.yml
   - postgresql/crowdsec.yml
