Clean up traefik component so it is really a component
Too much configuration existed in the component that was unique

--- a/kustomization/overlays/prod/traefik/patches/add_vector_sidecar.yml
+++ b/kustomization/overlays/prod/traefik/patches/add_vector_sidecar.yml
@@ -28,6 +28,8 @@ spec:
             - mountPath: /vector-data-dir
               name: vector-data
       volumes:
+        - emptyDir: {}
+          name: shared-logs
         - name: vector-config
           projected:
             defaultMode: 420
