--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -82,10 +82,10 @@ patches:
     target:
       kind: Deployment
       name: traefik-deployment
-  - path: patches/traefik/set_service_ip.yml
+  - path: patches/traefik/add_configuration.yml
     target:
-      kind: Service
-      name: traefik-svc
+      kind: Deployment
+      name: traefik-deployment
   - path: patches/traefik/update_subjects.yml
     target:
       kind: ClusterRoleBinding
@@ -98,3 +98,4 @@ resources:
   - postgresql/crowdsec.yml
   - redisreplication.yml
   - redissentinel.yml
+  - service.yml
