Hook up authelia to crowdsec

--- a/kustomization/overlays/prod/traefik/configmap/traefik/static.yml
+++ b/kustomization/overlays/prod/traefik/configmap/traefik/static.yml
@@ -6,7 +6,7 @@ accessLog:
       defaultMode: drop
       names:
         User-Agent: keep
-  filepath: /shared-logs/access.log
+  filepath: /var/log/traefik/access.log
   filters:
     statusCodes:
       - 200-299
