--- a/kustomization/overlays/prod/traefik/patches/add_vector_sidecar.yml
+++ b/kustomization/overlays/prod/traefik/patches/add_vector_sidecar.yml
@@ -20,7 +20,7 @@ spec:
           securityContext:
             runAsNonRoot: false
           volumeMounts:
-            - mountPath: /shared-logs
+            - mountPath: /var/log/traefik
               name: shared-logs
               readOnly: true
             - mountPath: /etc/vector/
