--- a/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia/config.yml
@@ -145,6 +145,8 @@ identity_providers:
 # ---
 # https://www.authelia.com/configuration/miscellaneous/logging/
 log:
+  file_path: /var/log/traefik/authelia.log
+  keep_stdout: true
   level: info
 
 # https://www.authelia.com/configuration/notifications/introduction/
