--- a/kustomization/overlays/prod/traefik/patches/authelia/add_container.yml
+++ b/kustomization/overlays/prod/traefik/patches/authelia/add_container.yml
@@ -56,6 +56,8 @@ spec:
             - mountPath: /secrets/authelia/users
               name: authelia-users
               readOnly: true
+            - mountPath: /var/log/traefik
+              name: shared-logs
         - name: traefik
       initContainers:
         - command:
@@ -105,3 +107,5 @@ spec:
               - key: authelia-users.yml
                 path: authelia-users.yml
             secretName: authelia-config-secret
+        - emptyDir: {}
+          name: shared-logs
