--- a/kustomization/overlays/prod/traefik/patches/crowdsec/add_container.yml
+++ b/kustomization/overlays/prod/traefik/patches/crowdsec/add_container.yml
@@ -14,7 +14,7 @@ spec:
             - /scripts/entrypoint.sh
           env:
             - name: COLLECTIONS
-              value: crowdsecurity/traefik
+              value: crowdsecurity/traefik LePresidente/authelia
             - name: DB_PASSWORD
               valueFrom:
                 secretKeyRef:
