do not allow new registration to self-hosted atuin

--- a/kustomization/overlays/prod/atuin/patches/set_config_env.yml
+++ b/kustomization/overlays/prod/atuin/patches/set_config_env.yml
@@ -17,6 +17,8 @@ spec:
                 secretKeyRef:
                   name: atuin-owner-user.atuin-16-pg.credentials.postgresql.acid.zalan.do
                   key: username
+            - name: ATUIN_OPEN_REGISTRATION
+              value: "false"
           name: generate-config
           volumeMounts:
             - mountPath: /postgresql-secrets
