Further restrict vector sidecar in traefik namespace

--- a/kustomization/overlays/prod/traefik/patches/add_vector_sidecar.yml
+++ b/kustomization/overlays/prod/traefik/patches/add_vector_sidecar.yml
@@ -18,7 +18,13 @@ spec:
           image: timberio/vector
           name: vector
           securityContext:
+            capabilities:
+              drop:
+                - ALL
+            readOnlyRootFilesystem: true
             runAsNonRoot: false
+            seccompProfile:
+              type: RuntimeDefault
           volumeMounts:
             - mountPath: /var/log/traefik
               name: shared-logs
