--- a/kustomization/overlays/prod/traefik/patches/authelia/add_container.yml
+++ b/kustomization/overlays/prod/traefik/patches/authelia/add_container.yml
@@ -6,6 +6,7 @@ metadata:
 spec:
   template:
     spec:
+      enableServiceLinks: false
       containers:
         - name: authelia
           args:
