Traefik securityContext should be in component

--- a/kustomization/components/traefik/deployment.yml
+++ b/kustomization/components/traefik/deployment.yml
@@ -31,4 +31,14 @@ spec:
             # Local Service
             - name: dashboard
               containerPort: 8080
+          securityContext:
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
+            readOnlyRootFilesystem: true
+            runAsNonRoot: true
+            runAsUser: 65534
+            seccompProfile:
+              type: RuntimeDefault
       priorityClassName: system-cluster-critical
