--- a/kustomization/overlays/prod/atuin/ingress.yml
+++ b/kustomization/overlays/prod/atuin/ingress.yml
@@ -3,12 +3,12 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.entrypoints: websecure,websecure-ext
     traefik.ingress.kubernetes.io/router.tls: "true"
   name: atuin-ingress
 spec:
   rules:
-    - host: atuin.hogs.tswn.us
+    - host: atuin.tswn.us
       http:
         paths:
           - backend:
